<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/sinbarra" >
 
   <TextView
        android:id="@+id/textViewRecomendacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/recomendacion"
        android:textSize="25sp" />
    
    <TextView
        android:id="@+id/textViewPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/numero_cel"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 
    <EditText
        android:id="@+id/editTextPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="phone"
        android:maxLength="12"
        android:ems="8"
        style="@style/AutoCompleteTextViewAppTheme" />

 
    <TextView
        android:id="@+id/textViewSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:text="@string/txt_recomendacion"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 
    <EditText
        android:id="@+id/editTextSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textMultiLine"
        android:layout_marginTop="5dp"
        android:lines="4"
        android:maxLength="120"
        android:ems="12"
        android:gravity="center"
        android:text="@string/hint_recomendacion"
        style="@style/AutoCompleteTextViewAppTheme" />
 
    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:text="@string/enviar"
        style="@style/ButtonAppTheme" />
 
</LinearLayout>