<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pizarron">

    <ImageView
        android:id="@+id/logoApprende"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:src="@drawable/apprende_transp" />

    <EditText
        android:id="@+id/editTextUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logoApprende"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:hint="@string/usuario_login"
        android:ems="8"
        android:maxLength="10"
        style="@style/AutoCompleteTextViewAppTheme" />
        
    
    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUserLogin"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/contrasena_login"
        android:ems="8"
        android:maxLength="10"
        android:inputType="textPassword"
        style="@style/AutoCompleteTextViewAppTheme"  />

    <Button
        android:id="@+id/buttonContinuar"
        style="@style/ButtonAppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPasswordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="goToMapa"
        android:text="@string/continuar" />

    <Button
        android:id="@+id/buttonCrearCuenta"
        style="@style/ButtonAppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonContinuar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="goToCrearCuenta"
        android:text="@string/crear" />


</RelativeLayout>