<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/sinbarra"
    >

    <TextView
        android:id="@+id/textViewCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crearcuenta"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:layout_marginTop="65dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        android:layout_marginTop="28dp">

        <TextView
            android:id="@+id/textViewUsuario"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            style="@style/AppTheme"
            />

        <EditText
            android:id="@+id/editTextUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:maxLength="10" 
            style="@style/AutoCompleteTextViewAppTheme">

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textViewPassword"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/AppTheme"
            />

       <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:maxLength="10" 
            android:inputType="textPassword"
            style="@style/AutoCompleteTextViewAppTheme"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/imageViewNino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nino"/>

        <ImageView
            android:id="@+id/imageViewNina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nina" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/imageViewGorro"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/gorro"
            android:layout_marginLeft="70dp" />

        <Spinner
            android:id="@+id/spinnerGrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:layout_weight="1" 
            style="@style/SpinnerAppTheme"/>

    </LinearLayout>

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/buttonListo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/listo"
        android:onClick="goToMapa" 
        style="@style/ButtonAppTheme"/>
 

</LinearLayout>